# ms-video-catalog-python

./: .gitignore  .pylintrc  Dockerfile  api.http  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh  start-app.sh
.docker/zsh/history/: .zsh_history
src/__seedwork/application/: dto.py  use_cases.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_int_validators.py
src/__seedwork/tests/unit/application/: test_unit_use_cases.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/domain/: test_entities.py
src/category/tests/integration/domain/: test_int_entities.py
src/category/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/category/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py
src/category/tests/unit/infra/: test_unit_repositories.py
src/core/__seedwork/application/: dto.py  use_cases.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
src/core/__seedwork/infra/: serializers.py
src/core/__seedwork/tests/integration/domain/: test_int_validators.py
src/core/__seedwork/tests/unit/application/: test_unit_use_cases.py
src/core/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  (+1 more)
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  repositories.py  validators.py
src/core/category/infra/: repositories.py  serializers.py
src/core/category/infra/django/: api.py  urls.py
src/core/category/infra/django_app/: api.py  mappers.py  models.py  repositories.py
src/core/category/tests/: helpers.py
src/core/category/tests/fixture/: categories_api_fixtures.py
src/django_app/: __init__.py  container.py  settings.py  test_fixtures.py  urls.py
src/django_app/django_app/: settings.py
uml/: class-diagram.wsd
(+16 files in other folders)
